--- a/about.html
+++ b/about.html
@@ -217,7 +217,7 @@
 </p>
  </div>
 
- <div class="abo1" style="border: 2px solid rgb(0, 0, 0);">
+ <div class="abo1-2" style="border: 2px solid rgb(0, 0, 0);">
     <h3 class="aboh1" style="font-size: 40px; text-shadow: 1px 1px #000;">Our Infrastructure</h3>
  <p class="abop1" style="font-size: 18px;">Owing to our ultra-modern and state-of-the-art infrastructural base, we are involved in delivering premium grade products to the valuable patrons. We have alienated our infrastructure into various departments such as procurement, manufacturing, quality testing, R&D and warehousing & packaging. This infrastructural unit helps us to meet the exact requirements of our precious clients.
 <br>
