--- a/contact.html
+++ b/contact.html
@@ -111,6 +111,19 @@
                   <input class="btn btn-primary" id="cbtn" type="submit" value="Submit">
                
           </div>
+          <div class="col-sm-5 con2_2">
+            <div class="icardp icon2" >
+              <img src="images/papa.jpeg" alt="hello" style="width:100%">
+              <h1>Neeraj Kapoor</h1>
+              <p class="ititlep">CEO & Founder,</p>
+              <p>Mechanical Engineer</p>
+              <a href="https://instagram.com/kimikapoor?utm_medium=copy_link"><i class="fa fa-instagram ipl"></i></a> 
+              <a href="#"><i class="fa fa-twitter ipl"></i></a> 
+              <a href="#"><i class="fa fa-linkedin ipl"></i></a> 
+              <a href="https://www.facebook.com/neeraj.kapoor.108"><i class="fa fa-facebook ipl"></i></a> 
+              <p><button type="button" class="ibuttonp" id="num2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="email: gskengineers@aol.in">Contact</button></p>
+            </div>
+          </div>
           
           <!-- <div class="col-sm-5 con2_2"> -->
             <div class="" style="margin-top: 5%;">
@@ -169,9 +182,9 @@
 
 </div>
 
-<div class="icon2" style=" margin-top: 2%; position: absolute; right: 10%; top: 25%;"> 
+<!-- <div class="icon2" style=" margin-top: 0%; position: absolute; right: 10%; top: 25%;">  -->
  
-
+  <!-- <div class="col-sm-5 con2_2">
   <div class="icardp" >
     <img src="images/papa.jpeg" alt="hello" style="width:100%">
     <h1>Neeraj Kapoor</h1>
@@ -182,9 +195,9 @@
     <a href="#"><i class="fa fa-linkedin ipl"></i></a> 
     <a href="https://www.facebook.com/neeraj.kapoor.108"><i class="fa fa-facebook ipl"></i></a> 
     <p><button type="button" class="ibuttonp" id="num2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="email: gskengineers@aol.in">Contact</button></p>
-  </div>
+  </div> -->
 
-  <div style="margin-top: 8%; color: rgb(70, 68, 68); font-size: 2em;">
+  <div style="margin-top: 1.5em; color: rgb(70, 68, 68); font-size: 2em;">
     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 16.287 16.425">
       <g transform="translate(-2.006)">
           <g data-name="Group 1424" transform="translate(2.006)">
