--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  
+
+
+
+
 <title>
         gskengineeringworks
     </title>
@@ -130,16 +133,13 @@
 </div>
   </div> -->
 <div style="background-color: rgb(239, 249, 255);">
-  <main class="body" style=" height: 100%;">
+  <main class="body" style=" height: 100%; width: 100%;">
   <!-- <main class="icontainer1"> -->
-       <div class="parah1" > 
-      <!-- <p class="ip1">
-       <b class="ip1h1">We are</b> one of the leading manufacturers, exporters and suppliers of a wide range of Fabric Dyeing Machines, Reversing Machines, Hydro Extractor, Balloon Pole Dryer, and Tumble Dryer etc.
-    
-      </p> -->
+       <div class="parah1" style="width: min-content;"  > 
+     
 
 
-      <div class="addition">
+       <div class="addition">
         <div class="slideshow">
           <div class="content">
             <div class="content-carrousel">
@@ -222,7 +222,19 @@
 </div> -->
 
 
-<div>
+<div style=" position: -webkit-sticky;
+position:fixed;
+bottom: 0;
+right: 0%;
+padding: 1%;
+z-index: 1;">
+
+<a href="https://wa.me/+919463704070">
+  <img src="whatsapp.png" style="width: 7%; height: 8%; position:fixed;
+  bottom: 0;
+  right: 0%;
+  padding: 1%;">
+  </a>
 
 </div>
 
@@ -532,6 +544,8 @@ Follow on
 
 <script src="script.js"></script>
 
+<whatsapp-button phone="7712345678" dialcode="44" text="hey there lets chat!" label="Start Chat"></whatsapp-button>
 
+<script src="https://unpkg.com/@open-wa/whatsapp-button?module" type="module"></script>
 </body>
 </html>
