--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 </div>
   </div> -->
 <div style="background-color: rgb(239, 249, 255);">
-  <main class="body" style=" height: 100%; width: 100%;">
-  <!-- <main class="icontainer1"> -->
-       <div class="parah1" style="width: min-content;"  > 
+  <main class="body" style=" height: 100%;">
+  
+       <div class="parah1"  > 
      
 
 
@@ -230,7 +230,7 @@ padding: 1%;
 z-index: 1;">
 
 <a href="https://wa.me/+919463704070">
-  <img src="whatsapp.png" style="width: 7%; height: 8%; position:fixed;
+  <img src="images/whatsapp.png" style="width: 7%; height: 8%; position:fixed;
   bottom: 0;
   right: 0%;
   padding: 1%;">
