--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@ z-index: 1;">
        <p class="ippara">Exporter and Manufacturer</p>
       </div>
       <div class="col">
-        <h5 class="iph" style="color:lightslategray; display: inline;">Total Number of Employees</h5>
-        <p class="ippara">Exporter and Manufacturer</p>
+        <h5 class="iph" style="color:lightslategray; display: inline;">Import Export Code (IEC)</h5>
+        <p class="ippara">ABEPK*****</p>
       </div>
     </div>
     <div class="row">
